Remove demo.html on build and don't beuild source map files on prod build

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --target lib --name vue-push-notification-preview src/components/index.js",
+    "build": "vue-cli-service build --target lib --name vue-push-notification-preview src/components/index.js && rm ./dist/demo.html",
     "publish": "bash npm_publish.sh"
   },
   "devDependencies": {
